[package]
name = "pastex"
version = "1.0.0"
description = "TODO"
authors = ["vbrajon"]
license = "MIT"
repository = "https://github.com/vbrajon/pastex"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-show", "window-hide", "global-shortcut-all", "clipboard-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
